# pr2_grasping

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  package.xml  regenerate.sh
config/: classifier_boost.yaml  classifier_network.yaml  classifier_svm.yaml  config.yaml  config_dense_evaluation.yaml  config_labeler.yaml  models_locations.yaml
config/classifiers/: DCH_72_split45_beer_drill_boost.yaml  DCH_72_split45_beer_drill_svm_auto.yaml  DCH_72_split4_beer_drill_boost.yaml  DCH_72_split4_beer_drill_svm_auto.yaml  DCH_72_split5_beer_drill_boost.yaml  DCH_72_split5_beer_drill_svm_auto.yaml
launch/: all.launch  base.launch  beer.launch  cinder_block.launch  cloud_analysis.launch  coke_can.launch  grasping.launch  move_group.launch  planning_context.launch  pr2.launch  pr2_bringup.launch  pr2_default_controllers.launch  pr2_no_controllers.launch  sauce_pan.launch  support_services.launch  trajectory_execution.launch.xml  world.launch
models/cinder_block/: model-1_4.sdf
models/cinder_block/materials/scripts/: cinderblock.material
models/coke_can/: model.config
models/cordless_drill/: model-1_4.sdf  model.config
models/hammer/: model-1_4.sdf  model.config
models/low_table/: model-1_2.sdf  model-1_3.sdf  model-1_4.sdf  model.config  model.sdf
models/monkey_wrench/: model-1_4.sdf  model.config
models/saucepan/: model-1_4.sdf  model.config
models/thin_beer/: model-1_4.sdf  model.config  model.sdf
models/tube_9_5mm/: model-1_4.sdf  model.config
models/wood_cube/: model-1_4.sdf  model.config
models/wood_cube_5cm/: model-1_4.sdf  model.config
msg/: DescriptorParams.msg  EvaluationStatus.msg  GraspingData.msg  GraspingPoint.msg  GraspingPointArray.msg  Line.msg  ObjectCloudData.msg
robots/: pr2.urdf.xacro  upload_pr2.launch
rviz/: default.rviz  planning.rviz
scripts/: pr2_cluster_analizer.py  pr2_cluster_analyzer.py  test_node.py  utils.py
src/: GraspingNode.cpp  Grasping_test_node.cpp  example_ac.cpp  example_gp.cpp  gazebo_pr2_grasping.cpp  gazebo_pr2_labeler.cpp  gazebo_pr2_setup.cpp  grasping_node.cpp  gripper_monitor.cpp  pick_place_tutorial.cpp  pr2_cloud_labeler.cpp  pr2_grasp_evaluator.cpp  pr2_grasper.cpp  pr2_grasping_example.cpp  pr2_grasping_example_ac.cpp  pr2_grasping_example_gp.cpp  setup_arms.cpp  test_ac.cpp  test_action_client.cpp  test_gp.cpp  test_group_pick.cpp  test_node.cpp
src/grasping_lib/: CMakeLists.txt  GazeboUtils.hpp  GraspingUtils.hpp  RobotUtils.hpp
src/grasping_lib/include/: GazeboUtils.hpp  GraspingUtils.hpp  IO.hpp  PkgUtils.hpp  RobotUtils.hpp
src/grasping_lib/src/: GazeboUtils.cpp  GraspingUtils.cpp  IO.cpp  PkgUtils.cpp  RobotUtils.cpp
srv/: CloudLabeler.srv  DescriptorCalc.srv  ExperimentId.srv  GazeboSetup.srv  GraspEvaluator.srv  GraspingGroup.srv
worlds/: beer_setup.world  cinder_block_1_setup.world  cinder_block_2_setup.world  cinder_block_setup.world  coke_can_setup.world  cordless_drill_1_setup.world  cordless_drill_2_setup.world  cordless_drill_3_setup.world  cordless_drill_setup.world  empty_setup.world  hammer_1_setup.world  hammer_2_setup.world  hammer_3_setup.world  hammer_setup.world  monkey_wrench_setup.world  sauce_pan_setup.world  saucepan_setup.world  thin_beer_1_setup.world  thin_beer_2_setup.world  thin_beer_3_setup.world  thin_beer_setup.world  tube_9_5mm_setup.world  tube_setup.world  wood_cube_1_setup.world  wood_cube_2_setup.world  wood_cube_3_setup.world  wood_cube_5cm_setup.world  wood_cube_setup.world
